--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,6 +12,8 @@
     --color-dark-3: #252525;
     --color-light-1: rgb(221, 221, 221);
 
+    --color-primary: #B00B1E;
+
     --shadow-aside: 0px 0px 20px 0px rgba(103, 103, 103, 0.2509803922) inset;
     --shadow-aside-social: 0px 0px 15px 0px rgba(221, 221, 221, 0.1490196078) inset;
 
